overflow fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -67,6 +67,7 @@ html {
 
 body {
   font-family: $font-1, sans-serif;
+  overflow-x: hidden;
 }
 
 ul,
